# uia-recoreder-win32

./: .gitignore  .pdm.toml  README.md  pyproject.toml  requirements.txt  testing.py
uiarecorder/: __init__.py  cli.py  core.py  play.py  testing.py
