[project]
name = "UIARecorder"
version = "0.1"
description = "Finding UIA elemnts path"
authors = [
    {name = "Uatkhanov Serik", email = "seriku2@halykbank.nb"},
]
dependencies = [
    "astroid==2.5.6",
    "autopep8==1.5.7",
    "colorama==0.4.4",
    "comtypes==1.1.10",
    "enum34==1.1.10",
    "isort==5.8.0",
    "lazy-object-proxy==1.6.0",
    "mccabe==0.6.1",
    "numpy==1.20.3",
    "opencv-python==4.5.2.52",
    "overlay-arrows-and-more==0.4.0",
    "packaging==20.9",
    "pillow==8.2.0",
    "pip-review==1.1.0",
    "pycodestyle==2.7.0",
    "pylint==2.8.2",
    "pynput==1.7.3",
    "pyparsing==2.4.7",
    "pywin32==300",
    "pywinauto==0.6.8",
    "six==1.16.0",
    "toml==0.10.2",
    "typed-ast==1.4.3",
    "wrapt==1.12.1",
    "UIARecorder @ file:///D:/My%20project/uia-recoreder-win32/dist/UIARecorder-0.1-py3-none-any.whl",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black~=21.7b0",
]
